# chess99

./: .gitignore  CMakeLists.txt  README.txt  board.c  board.h  piece.c  piece.h  state.c  state.h  types.c  types.h
src/: CMakeLists.txt  board.c  board.h  event.c  event.h  state.c  state.h  types.c  types.h
tests/: CMakeLists.txt  board_tests.c  fdiff.c  fdiff.h  game_state_tests.c  main.c  print_piece_tests.c  test_manager.c  test_manager.h  tests.h  type_tests.c  utils.c  utils.h
